--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "dependencies": {
     "encdenc": "^1.0.3",
     "socket.io": "^4.5.0"
+  },
+  "scripts": {
+    "start": "node server.js"
   }
 }
